<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="70dp"
        android:layout_height="84dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="51dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_carteira" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginBottom="8dp"
            android:text="@string/versao"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDefault"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_"
            android:textAlignment="center"
            android:textColor="@color/whiteColorAux"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.502">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:textAlignment="center"
            app:errorEnabled="true"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="182dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_baseline_email_24"
                android:hint="E-mail"
                android:inputType="textWebEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="0dp"
            android:textAlignment="center"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDarkDefault"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="273dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Senha"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDefault"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:gravity="center"
            android:onClick="validarELogarUsuario"
            android:text="@string/login_"
            android:textAlignment="center"
            android:textColor="@color/whiteColorAux"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="387dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="irTelaCadastro"
                android:text="@string/cadastrar_se"
                android:textAlignment="textStart"
                android:textColor="#3F51B5"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="459dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="irTelaRecuperar"
                android:text="@string/recup__"
                android:textAlignment="textEnd"
                android:textColor="#3F51B5"
                tools:layout_editor_absoluteX="293dp"
                tools:layout_editor_absoluteY="459dp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarCircular"
        style="?android:attr/progressBarStyle"
        android:layout_width="245dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>