<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:textAlignment="center"
                                                   tools:context=".activity.RecuperaActivity"
                                                   android:background="@mipmap/bac_fund">

    <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/buttonRecuperar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmailRecuperar"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@mipmap/back_input"
                    android:drawableRight="@drawable/ic_baseline_email_24"
                    android:hint="E-mail"
                    android:inputType="textWebEmailAddress"
                    android:padding="10dp" android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/buttonRecuperar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDefault"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                android:gravity="center"
                android:text="@string/recup__"
                android:textColor="@color/whiteColorAux"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

        <TextView
                android:id="@+id/textView17"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="irTelaLogin"
                android:text="@string/login_"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRecuperar"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="70dp"
            android:layout_height="84dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="51dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_carteira"/>

        <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginBottom="8dp"
                android:text="@string/versao"
                android:textAlignment="center"
                android:textSize="12sp"/>
    </LinearLayout>
    <ProgressBar
            android:id="@+id/progressBarCircularRecupera"
            style="?android:attr/progressBarStyle"
            android:layout_width="245dp"
            android:layout_height="245dp"
            android:layout_marginTop="245dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="@mipmap/backp_rogress"/>
</androidx.constraintlayout.widget.ConstraintLayout>